--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,20 @@
 
         <title>Iechipele</title>
 
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Oxygen&display=swap"
+            rel="stylesheet"
+        />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Hind+Siliguri&family=Oxygen&display=swap"
+            rel="stylesheet"
+        />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Signika+Negative&display=swap"
+            rel="stylesheet"
+        />
         <link rel="icon" type="image/png" href="./favicon.png" />
         <link rel="stylesheet" href="/global.css" />
         <link rel="stylesheet" href="/build/bundle.css" />
