--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-        <title>Iechipele</title>
+        <title>Juxtaposify</title>
 
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -20,7 +20,7 @@
             href="https://fonts.googleapis.com/css2?family=Signika+Negative&display=swap"
             rel="stylesheet"
         />
-        <link rel="icon" type="image/png" href="./favicon.png" />
+        <link rel="icon" type="image/png" href="./favicon.ico" />
         <link rel="stylesheet" href="/global.css" />
         <link rel="stylesheet" href="/build/bundle.css" />
 
