--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
             href="https://fonts.googleapis.com/css2?family=Signika+Negative&display=swap"
             rel="stylesheet"
         />
-        <link rel="icon" type="image/png" href="./favicon.ico" />
+        <link rel="icon" type="image/png" href="/favicon.ico" />
         <link rel="stylesheet" href="/global.css" />
         <link rel="stylesheet" href="/build/bundle.css" />
 
