added meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,11 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1" />
+        <meta name="description" content="Gaseste playeri. Aici. Acum" />
+        <meta
+            name="keywords"
+            content="team, game, gaming, player, group, lfg, lol, csgo, valorant, dota2, echipa, juxtaposify"
+        />
 
         <title>Juxtaposify</title>
 
