--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,10 @@
         <meta name="description" content="Gaseste playeri. Aici. Acum" />
         <meta
             name="keywords"
-            content="team, game, gaming, player, group, lfg, lol, csgo, valorant, dota2, echipa, juxtaposify"
+            content="team, game, gaming, player, group, lfg, lol, csgo, valorant, dota2, echipa, deqlify, queue"
         />
 
-        <title>Juxtaposify</title>
+        <title>Deqlify</title>
 
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
