--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
             content="team, game, gaming, player, group, lfg, lol, csgo, valorant, dota2, echipa, unity, queue"
         />
 
-        <title>iunity</title>
+        <title>Noctur</title>
 
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -25,7 +25,7 @@
             href="https://fonts.googleapis.com/css2?family=Signika+Negative&display=swap"
             rel="stylesheet"
         />
-        <link rel="icon" type="image/png" href="/favicon.ico" />
+        <link rel="icon" type="image/png" href="/logo.png" />
         <link rel="stylesheet" href="/global.css" />
         <link rel="stylesheet" href="/build/bundle.css" />
 
